--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h6{font-size:.75rem;}
 }
 
 section{
-    background-color: orangered;
+    background-color: #fff;
     padding: 10px;
     width:90%;
     margin:0 auto;
