--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,10 @@ h3{font-size:1.5rem;}
 h4{font-size:1.25rem;}
 h5{font-size:1rem;}
 h6{font-size:.75rem;}
-
+p{
+    font-size:1rem;
+    line-height:2;
+}
 /* Text Styles */
 .main{
     margin:0 auto;
@@ -94,7 +97,8 @@ p{font-size:.95rem;}
     bottom: 0;
     color: white;
     left: 0;
-    padding:1.5rem 0;
+    padding-top:.75rem;
+    padding-bottom:.5rem;
     position: fixed;
     text-align: center;
     width: 100%;
