--- a/css/style.css
+++ b/css/style.css
@@ -31,21 +31,27 @@ li.nav-item > a:hover, li.nav-item > a:active, li.nav-item:visited{
     padding-bottom:5px;
 }
 
-h1{font-size: 2rem;}
-h2{font-size: 1.75rem;
+h1{font-size: calc(1rem *3);}
+h2{font-size: calc(1rem *1.5);
 padding-bottom:.5rem;}
-h3{font-size:1.5rem;}
-h4{font-size:1.25rem;}
-h5{font-size:1rem;}
-h6{font-size:.75rem;}
+h3{font-size:calc(1rem *2)}
+h4{font-size:calc(1rem *1.75)}
+h5{font-size:calc(1rem *1.25)}
+h6{font-size:.calc(1rem *.85)}
 p{
     font-size:1rem;
-    line-height:2;
+    line-height:1.75;
+    margin-block-start: 1em;
+    margin-block-bottom: 1em;
+}
+
+p a{
+    color: #00578a !important;
 }
 /* Text Styles */
 .main{
     margin:0 auto;
-    padding: 10px 0;
+    padding: 10px 0 5rem 0;
     width:1260px;
 }
 
@@ -70,7 +76,7 @@ hr.section-divider + p{
 h1{font-size: calc(2rem*.75)}
 h2{font-size: calc(1.75rem*.75)}
 h3{font-size:calc(1.5rem*.75)}
-h4{font-size:calc(1.25rem*.75)}
+h4{font-size:calc(1.2rem*.75)}
 h5{font-size:calc(1rem*.75);}
 h6{font-size:.5rem;}
 p{font-size:.95rem;}
@@ -90,6 +96,30 @@ p{font-size:.95rem;}
 }
 
 /* End of Header */
+
+/* Secondary Content */
+section.secondary-content{
+    padding-left:5rem !important;
+}
+.sc-bullet{
+    list-style-type:none;
+    margin-block-start:1.5rem;
+    margin-bottom:1.5rem;
+}
+
+.sc-bullet>p>img{
+    padding-top:5px;
+    border-style:none;
+    display: inline-block;
+    max-height: 40px;
+    max-width:100%;
+    margin-right:10px;
+    vertical-align: middle;
+}
+
+
+/* End of Secondary Content */
+
 /* Footer */
 
 .footer {
@@ -105,7 +135,8 @@ p{font-size:.95rem;}
  }
  nav.footer-nav.nav ul li.nav-item a{
     color:rgb(230, 230, 230);
-    font-weight: 400;
+    font-size:1rem;
+    font-weight: 200;
 }
 
 
@@ -113,8 +144,12 @@ p{font-size:.95rem;}
 img.icons{
     border-style:none;
     display: inline-block;
-    height: auto;
+    max-height: 60px;
     max-width:100%;
     margin-right:.25rem;
     vertical-align: middle;
+}
+
+img.icons.monsido-icon{
+    max-height:50px;
 }
